# acliv

./: .dockerignore  .gitignore  README.md  REFACTOR_PLAN.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: docker-release.yml  release.yml
assets/skills/acliv-release-automation/: SKILL.md
deploy/: .env.example  .gitignore  Dockerfile  docker-compose.build.yml  docker-compose.local.yml  docker-compose.yml  docker-entrypoint.sh  install.sh
docs/: AGENTS.md  AUTO_UPDATE_SPEC.md  CLAUDE.md  CLAUDE_HISTORY_FUTURE_OPTIMIZATIONS.md  I18N_IMPLEMENTATION_GUIDE.md  LINUX_DEPLOY_OPTIMIZATION_PLAN.md  REFACTOR_PLAN.md  RELEASE_AUTOMATION_PLAN.md  SEARCH_UPGRADE_PLAN.md
docs/releases/: v1.0.12.md  v1.0.13.md  v1.0.14.md  v1.0.15.md
public/css/: style.css
scripts/: assert-release-notes.ps1  build-release.ps1  check.ps1  publish-release.ps1  sync-version.ps1
src/: App.svelte  main.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cmd.rs  lib.rs  loader.rs  models.rs  paths.rs  watcher.rs
src-tauri/src/search_index/: db.rs  error.rs  indexer.rs  mod.rs  query.rs  schema.rs  status.rs  tokenizer.rs  types.rs
src-tauri/src/session_manager/: mod.rs
src-tauri/src/session_manager/providers/: claude.rs  codex.rs  gemini.rs  mod.rs  openclaw.rs  opencode.rs  pi.rs
src-tauri/web/: Cargo.toml
src-tauri/web/src/: main.rs
src/lib/: api.ts  updater.ts
src/lib/components/: Markdown.svelte
src/lib/i18n/: en.ts  index.ts  zh.ts
