[package]
name = "acliv-web"
version = "1.0.9"
description = "ACLIV - Web Server"
authors = ["Your Name"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[[bin]]
name = "acliv-web"
path = "src/main.rs"

[dependencies]
axum = "0.7.9"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.5.2", features = ["fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
regex = "1.11"
chrono = { version = "0.4.44", features = ["serde"] }
jieba-rs = "0.9.0"
rand = "0.8"
sha2 = "0.10"
rusqlite = { version = "0.37.0", features = ["bundled"] }
notify = "6.1.1"

[dev-dependencies]
tempfile = "3"
